@@ -22,7 +22,6 @@ services:
       IP_WHITELIST_2: ${IP_WHITELIST_2}
       FPM_HOST: ${FPM_HOST}
       SITE: ${SITE}
-      LETSENCRYPT: ${LETSENCRYPT}
       HTPASS: ${HTPASS}
       MODSEC_ENGINE_MODE: ${MODSEC_ENGINE_MODE}
       DISABLE_CONF: ${DISABLE_CONF}
